--- a/Docs (Relatório)/Relatorio_Final.Rmd
+++ b/Docs (Relatório)/Relatorio_Final.Rmd
@@ -20,7 +20,7 @@ Zaher *et al.* (2009), com base em dados moleculares, sinonimizaram *Lystrophis*
 
 Günther (1858) descreve *Coronella jaegeri* com base em dois espécimes, uma fêmea adulta e uma fêmea jovem procedentes do “Brasil”, sem localidade específica. Peters (1863) descreve *Liophis (Opheomorphus) dorsalis* procedente do “Brasil”, sem localidade específica. Hensel (1868) reporta *Liophis dorsalis* para o estado do Rio Grande do Sul, Brasil. Boulenger (1886) apresenta uma lista de todas as espécies de anfíbios e répteis procedentes do estado do Rio Grande do Sul depositados no Museu de História Natural de Londres, além dos espécimes desta região depositados no Museu de Berlim e coletados por Hensel. Neste trabalho Boulenger (1886) coloca *Liophis (Opheomorphus) dorsalis* Peters, 1863 na sinonímia de *Coronella jaegeri*. Boulenger (1894a) descreve *Aporophis coralliventris* com base em um único exemplar macho procedente de “an island north of Concepcion, near San Salvador, north Paraguay” (uma ilha ao norte de Concepcion, próximo a San Salvador, norte do Paraguai). Boulenger (1894b) transfere *C. jaegeri* para o gênero *Rhadinaea* Cope, 1863. Werner (1899) descreve *Rhadinaea dichroa* procedente da Argentina, sem localidade específica. Jensen (1900) descreve *Rhadinaea lineata* procedente da localidade de Taboleiro Grande, município de Lagoa Santa, estado de Minas Gerais. Amaral (1926) transfere *R. jaegeri* juntamente com alguns outros táxons para o gênero *Liophis*. Amaral (1929a) coloca *R. lineata* e *R. dichroa* na sinonímia de *L. jaegeri*. Amaral (1929b, c) coloca o gênero *Aporophis* na sinonímia de *Lygophis* e propõe a combinação *Lygophis coralliventris*. Dixon (1980) coloca os gêneros *Dromicus* Bibron, 1843, *Leimadophis* Fitzinger, 1843e *Lygophis* Fitzinger, 1843 na sinonímia de *Liophis* Wagler, 1830. Dixon (1987) retira *R. dichroa* da sinonímia de *L. jaegeri* pela primeira apresentar 19 escamas dorsais e considera *R. dichroa* como sinônimo de *Liophis poecilogyrus caesius*. No mesmo trabalho Dixon (1987) considera *L. coralliventris* como uma subespécie de *L. jaegeri*, reconhecendo os táxons *L. jaegeri jaegeri* e *L. jaegeri coralliventris*. Souto (2016)  examinou caracteres de folidose, padrão de coloração, morfologia do hemipênis e glândulas cefálicas de diversos exemplares das duas subespécies da *L. jaegeri* observou diferenças importantes no padrão de coloração entre a população do sudeste do Brasil (morfótipo I) em relação àquelas do Sul do Brasil, Uruguai, Argentina e Paraguai (morfótipo II) (Figura 1C). Ao analisar a frequência de estados de caracteres relacionados à presença de faixa paravertebral e pontuações escuras na borda apical das escamas dorsais de cada morfótipo, duas espécies plenas foram reconhecidas dentro da distribuição anteriormente conhecida para *L. jaegeri*. Após análises de fotografia de síntipos e estudo detalhado do histórico taxonômico de *L. jaegeri* foi possível associar o morfótipo I e II a *Liophis jaegeri* e *Liophis dorsalis*, respectivamente (Figura 1).
 
-![](../Projeto curso R/Figs/Imagem1.png) **Figura 1**: A: *Liophis jaegeri*, Foto: Ricardo Sawaia; B: *Liophis dorsalis*, Foto: Konrad Mebert; C: Mapa de distribuição de *Liophis jaegeri* e *Liohis dorsalis*, retirado de Souto (2016).
+![](../Figs/Imagem1.png) **Figura 1**: A: *Liophis jaegeri*, Foto: Ricardo Sawaia; B: *Liophis dorsalis*, Foto: Konrad Mebert; C: Mapa de distribuição de *Liophis jaegeri* e *Liohis dorsalis*, retirado de Souto (2016).
 
 ## Objetivos
 Analisar as variações do número de escamas ventrais e subcaudais, além do comprimento rostro cloacal (CRC) e comprimento caudal (CC) das espécies *Liophis jaegeri* e *Liophis dorsalis*.
@@ -77,7 +77,7 @@ par(mfrow = c(1,2))
 hist(Liophis_dorsalis$Esc_ventrais, las = 1)
 hist(Liophis_jaegeri$Esc_ventrais, las = 1)
 ```
-![](../Projeto curso R/Figs/Freq_Ventrais_Especie.png)
+![](../Figs/Freq_Ventrais_Especie.png)
 
 **Figura 2**: Histograma mostrando a frequência do número de escamas ventrais de *Liophis dorsalis* e *Liophis jaegeri*.
 
@@ -91,7 +91,7 @@ par(mfrow = c(1,2))
 hist(Liophis_dorsalis$Esc_subcaudais, las = 1)
 hist(Liophis_jaegeri$Esc_subcaudais, las = 1)
 ```
-![](../Projeto curso R/Figs/Freq_Subcaudais_Especie.png)
+![](../Figs/Freq_Subcaudais_Especie.png)
 
 **Figura 3**: Histograma mostrando a frequência do número de escamas subcaudais de *Liophis dorsalis* e *Liophis jaegeri*.
 
@@ -105,7 +105,7 @@ par(mfrow = c(1,2))
 hist(Liophis_dorsalis$CRC, las = 1)
 hist(Liophis_jaegeri$CRC, las = 1)
 ```
-![](../Projeto curso R/Figs/Freq_CRC_Especie.png) 
+![](../Figs/Freq_CRC_Especie.png) 
 
 **Figura 4**: Histograma mostrando a frequência do comprimento rostro cloacal (CRC) de *Liophis dorsalis* e *Liophis jaegeri*.
 
@@ -119,7 +119,7 @@ par(mfrow = c(1, 2))
 hist(Liophis_dorsalis$CC, las = 1)
 hist(Liophis_jaegeri$CC, las = 1)
 ```
-![](../Projeto curso R/Figs/Freq_CC_Especie.png) 
+![](../Figs/Freq_CC_Especie.png) 
 
 **Figura 5**: Histograma mostrando a frequência do comprimento caudal (CC) de *Liophis dorsalis* e *Liophis jaegeri*.
 
@@ -137,7 +137,7 @@ par(mfrow = c(1,2))
 boxplot(Esc_ventrais ~ Especie, data = Dados, las = 1)
 boxplot(Esc_subcaudais ~ Especie, data = Dados, las = 1)
 ```
-![](../Projeto curso R/Figs/Rplot_Esc_Especies.png) 
+![](../Figs/Rplot_Esc_Especies.png) 
 **Figura 6**: Diferenças no número de escamas ventrais e subcaudais entre *Liophis dorsalis* e *Liophis jaegeri*.
 
 
@@ -150,7 +150,7 @@ par(mfrow = c(1,2))
 boxplot(CRC ~ Especie, data = Dados, las = 1)
 boxplot(CC ~ Especie, data = Dados, las = 1)
 ```
-![](../Projeto curso R/Figs/Rplot_CRC_CC_Especie.png) 
+![](../Figs/Rplot_CRC_CC_Especie.png) 
 **Figura 7**: Diferenças no CRC e CC entre *Liophis dorsalis* e *Liophis jaegeri*.
 
 
@@ -165,7 +165,7 @@ boxplot(Esc_subcaudais ~ Sexo, data = Liophis_dorsalis, las = 1)
 boxplot(Esc_subcaudais ~ Sexo, data = Liophis_jaegeri, las = 1)
 boxplot(Esc_subcaudais ~ Sexo, data = Liophis_jaegeri, las = 1)
 ```
-![](../Projeto curso R/Figs/Imagem4.png) 
+![](../Figs/Imagem4.png) 
 **Figura 8**: Dimorfismo sexual considerando o número de escamas ventrais e subcaudais de *Liophis dorsalis* e *Liophis jaegeri*.
 
 
@@ -180,7 +180,7 @@ boxplot(CC ~ Sexo, data = Liophis_dorsalis, las = 1)
 boxplot(CC ~ Sexo, data = Liophis_jaegeri, las = 1)
 boxplot(CC ~ Sexo, data = Liophis_jaegeri, las = 1)
 ```
-![](../Projeto curso R/Figs/Imagem5.png) 
+![](../Figs/Imagem5.png) 
 **Figura 9**: Dimorfismo sexual considerando CRC e CC de *Liophis dorsalis* e *Liophis jaegeri*.
 
 ---
@@ -223,9 +223,11 @@ especie <- as.factor(Dados[ ,1])
 # Plotando com grupos
 fviz_pca(resu.pca, habillage = especie, title = )
 ```
-![](../Projeto curso R/Figs/PCA_2.png) 
+![](../Figs/PCA_2.png) 
 
 **Figura 10**: Análise de Componentes Principais considerando quatro caracteres de *Liophis dorsalis* e *Liophis jaegeri*.
+
+&nbsp;
 
 
 As análises mostram que os estados de caráter mais frequêntes dos espécimes examinados de *Liophis dorsalis* foram número de escamas ventrais entre 155-160 (**média**: 159.6), número de escamas subcaudais entre 60-65 (**média**: 66.14), CRC de 30-35 cm (**média**: 33,91) e CC de 10-12 cm (**média**: 10.51) (Figuras 2-5). Já os espécimes de *Liophis jaegeri* apresentaram mais frequentemente escamas ventrais entre 145-150 (**média**: 153.8), número de escamas subcaudais entre 55-60 (**média**: 59.42), CRC de 35-40 cm (**média**: 35.81) e CC de 10-11 cm (**média**: 10.15) (Figuras 2-5).
